--- a/package.json
+++ b/package.json
@@ -1,73 +1,79 @@
 {
-    "name": "vue-transform-tool",
-    "version": "0.0.2-alpha",
-    "description": "Transform tool component for editor-like application",
-    "main": "./dist/index.js",
-    "types": "./index.d.ts",
-    "scripts": {
-      "test": "jest --coverage",
-      "start": "npm run build && npm run example",
-      "example": "cross-env NODE_ENV=dev webpack-dev-server --entry ./example/index.jsx --config ./build/webpack.config.base.js", 
-      "build": "npm run build:js && npm run build:types",
-      "build:js": "cross-env NODE_ENV=production webpack --entry ./src/index.tsx --config ./build/webpack.config.base.js",
-      "build:types": "tsc -p tsconfig.declaration.json"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/elgine/vue-transform-tool.git"
-    },
-    "keywords": [
-      "vue",
-      "transform-tool",
-      "editor"
-    ],
-    "author": "elgine",
-    "license": "MIT",
-    "bugs": {
-      "url": "https://github.com/elgine/vue-transform-tool/issues"
-    },
-    "homepage": "https://github.com/elgine/vue-transform-tool#readme",
-    "dependencies": {
-      "@types/lodash": "^4.14.134",
-      "@types/uuid": "^3.4.4",
-      "clsx": "^1.0.4",
-      "lodash": "^4.17.11",
-      "uuid": "^3.3.2"
-    },
-    "peerDependencies": {
-      "vue": ">=2.4.0"
-    },
-    "devDependencies": {
-      "@babel/core": "^7.3.4",
-      "@babel/helper-replace-supers": "^7.3.4",
-      "@babel/node": "^7.2.2",
-      "@babel/plugin-proposal-class-properties": "^7.4.0",
-      "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-      "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-      "@babel/plugin-transform-regenerator": "^7.4.3",
-      "@babel/plugin-transform-runtime": "^7.5.5",
-      "@babel/polyfill": "^7.4.4",
-      "@babel/preset-env": "^7.3.4",
-      "@babel/preset-typescript": "^7.3.3",
-      "@babel/register": "^7.0.0",
-      "@babel/runtime": "^7.5.5",
-      "babel-eslint": "^10.0.1",
-      "babel-loader": "^8.0.5",
-      "babel-plugin-import": "^1.11.0",
-      "clean-webpack-plugin": "^3.0.0",
-      "compression-webpack-plugin": "^2.0.0",
-      "copy-webpack-plugin": "^5.0.2",
-      "cross-env": "^5.2.0",
-      "eslint": "^5.16.0",
-      "eslint-config-alloy": "^2.0.0-alpha.2",
-      "html-webpack-plugin": "^3.2.0",
-      "jest": "^24.9.0",
-      "jest-puppeteer": "^4.3.0",
-      "webpack": "^4.30.0",
-      "webpack-bundle-analyzer": "^3.3.2",
-      "webpack-cli": "^3.1.2",
-      "webpack-dev-server": "^3.1.9",
-      "webpack-merge": "^4.1.4",
-      "webpack-node-externals": "^1.7.2"
-    }
+  "name": "vue-transform-tool",
+  "version": "0.0.2-alpha",
+  "description": "Transform tool component for editor-like application",
+  "main": "./dist/index.js",
+  "types": "./index.d.ts",
+  "scripts": {
+    "test": "jest --coverage",
+    "start": "npm run build && npm run example",
+    "example": "cross-env NODE_ENV=dev webpack-dev-server --entry ./example/index.jsx --config ./build/webpack.config.base.js",
+    "build": "npm run build:js && npm run build:types",
+    "build:js": "cross-env NODE_ENV=production webpack --entry ./src/index.tsx --config ./build/webpack.config.base.js",
+    "build:types": "tsc -p tsconfig.declaration.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elgine/vue-transform-tool.git"
+  },
+  "keywords": [
+    "vue",
+    "transform-tool",
+    "editor"
+  ],
+  "author": "elgine",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/elgine/vue-transform-tool/issues"
+  },
+  "homepage": "https://github.com/elgine/vue-transform-tool#readme",
+  "dependencies": {
+    "@types/lodash": "^4.14.134",
+    "@types/uuid": "^3.4.4",
+    "clsx": "^1.0.4",
+    "lodash": "^4.17.11",
+    "uuid": "^3.3.2"
+  },
+  "peerDependencies": {
+    "vue": ">=2.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/helper-replace-supers": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-regenerator": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "@vue/babel-preset-jsx": "^1.1.0",
+    "babel-eslint": "^10.0.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^5.0.2",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-alloy": "^2.0.0-alpha.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "jest-puppeteer": "^4.3.0",
+    "vue": "^2.6.10",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
+  }
 }
