--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,16 +5,7 @@
         {
             "language": "javascript",
             "autoFix": true
-        },
-        {
-            "language": "typescript",
-            "autoFix": true
-        },
-        {
-            "language": "typescriptreact",
-            "autoFix": true
         }
     ],
-    "git.ignoreLimitWarning": true,
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "git.ignoreLimitWarning": true
 }
