--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "scripts": {
     "test": "jest --coverage",
     "start": "npm run build && npm run example",
-    "example": "cross-env NODE_ENV=dev webpack-dev-server --entry ./example/index.jsx --config ./build/webpack.config.base.js",
-    "build": "npm run build:js && npm run build:types",
-    "build:js": "cross-env NODE_ENV=production webpack --entry ./src/index.tsx --config ./build/webpack.config.base.js",
-    "build:types": "tsc -p tsconfig.declaration.json"
+    "example": "cross-env NODE_ENV=dev webpack-dev-server --entry ./example/index.js --config ./build/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --entry ./src/index.js --config ./build/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -53,7 +51,7 @@
     "@babel/runtime": "^7.5.5",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-preset-jsx": "^1.1.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
@@ -61,14 +59,22 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^5.0.2",
+    "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-alloy": "^2.0.0-alpha.2",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.2.2",
+    "eslint-config-alloy": "^2.0.5",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
     "vue": "^2.6.10",
+    "vue-eslint-parser": "5.0.0",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.30.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2",
